jump done+bugsv1

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -27,10 +27,17 @@ body {
     position: relative;
     background-image: url(../images/image.png);
     background-size: cover;
-    /*animation: slide 5s linear infinite;*/
+    animation: slide 10s linear infinite;
+  }
+
+  #ground-image {
+    display: none;
+
+
+
   }
   
-  @keyframes slide {
+/*   @keyframes slide {
     0% {
       background-position: 0 -1000px;
     }
@@ -39,9 +46,15 @@ body {
     }
     100% {
       background-position: 0 50px;
-    }
-  }
-  
+    } */
+/* 
+/*     @keyframes slide {
+      0% {
+        transform: translate(0 0);
+      }
+      100% {
+        transform: translate(-1920px 0); /* The image width */
+
   #game-end {
     display: none;
   }
